# meeting-room-booking

./: .dockerignore  .gitignore  Dockerfile  README.md  fix_encoding.py  fix_init.py  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/endpoints/: admin.py  auth.py  bookings.py  rooms.py
app/core/: config.py  security.py
app/models/: booking.py  room.py  user.py
app/repositories/: booking_repo.py  room_repo.py  user_repo.py
app/services/: auth_service.py
tests/: test_api.py
